move test folder out

--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -1,7 +1,7 @@
 ## calloc()
 
-+ 功能：分配所需的内存空间,并返回一个指向它的指针
-+ 原型：`void *calloc(size_t nitems, size_t size)`
++ 简述：分配所需的内存空间,并返回一个指向它的指针
++ 声明：`void *calloc(size_t nitems, size_t size)`
 + 参数：
   + nitems -- 要被分配的元素的个数
   + size   -- 元素的大小
@@ -10,8 +10,8 @@
 
 ## strlen()
 
-+ 功能：计算字符串 `str` 的长度，直到空结束字符，但不包括空结束字符
-+ 原型：`size_t strlen(const char *str);`
++ 简述：计算字符串 `str` 的长度，直到空结束字符，但不包括空结束字符
++ 声明：`size_t strlen(const char *str);`
 + 参数：
   + `str` -- 要计算长度的字符串
 + 返回值：
@@ -21,8 +21,8 @@
 
 ## dup2()
 
-+ 功能：将 `fd` 复制到 `fd2`，关闭 `fd2` 并使其在同一文件上打开
-+ 原型：`int dup2 (int fd, int fd2);`
++ 简述：将 `fd` 复制到 `fd2`，关闭 `fd2` 并使其在同一文件上打开
++ 声明：`int dup2 (int fd, int fd2);`
 + 参数：
   + `fd`  --  已经打开的文件描述符
   + `fd2` --  需要重复打开的文件描述符
@@ -32,8 +32,8 @@
 
 ## write()
 
-+ 功能：将 n 字节的 buf 写入 __fd
-+ 原型：`ssize_t write(int __fd, const void *__buf, size_t __n);`
++ 简述：将 n 字节的 buf 写入 __fd
++ 声明：`ssize_t write(int __fd, const void *__buf, size_t __n);`
 + 参数：
   + `__fd`  --  要保存写入数据的文件
   + `__buf` --  保存要写入的内存块指针
@@ -44,8 +44,8 @@
 
 ## read()
 
-+ 功能：将大小为`nbytes`的数据从文件`__fd`中读取到内存`__buf`中
-+ 原型：`ssize_t read(int __fd, void *__buf, size_t __nbytes);`
++ 简述：将大小为`nbytes`的数据从文件`__fd`中读取到内存`__buf`中
++ 声明：`ssize_t read(int __fd, void *__buf, size_t __nbytes);`
 + 参数：
   + `__fd`  --  被读取数据的文件
   + `__buf` --  存放数据的内存块指针
@@ -60,10 +60,10 @@
 
 ## mmap()
 
-+ 功能：
++ 简述：
   + 映射地址从`addr`附近开始并扩展到`len`字节。从`offset`根据`prot`和`flags`写入文件`fd`中描述。
   + 如果`MAP_FIXED`位是在`flags`中设置，映射将准确地位于`addr`；否则系统会选择一个方便的附近地址
-+ 原型：`void* mmap(void *addr, size_t len, int prot, int flags, int fd, off_t offset);`
++ 声明：`void* mmap(void *addr, size_t len, int prot, int flags, int fd, off_t offset);`
 + 参数：
   + `addr`  --  要映射的地址
   + `len`   --  要映射的数据大小
@@ -77,8 +77,8 @@
 
 ## dirname()
 
-+ 功能：返回`path`的目录部分，如果没有可用的，就返回`.`
-+ 原型：`char* dirname(char *path);`
++ 简述：返回`path`的目录部分，如果没有可用的，就返回`.`
++ 声明：`char* dirname(char *path);`
 + 参数：
   + `path`  --  需要查找目录的文件
 + 返回值：
@@ -87,8 +87,8 @@
 
 ## basename()
 
-+ 功能：去掉文件`pathfile`的前缀，只保存文件名(input string:/data/test.cpp , output string:test.cpp)
-+ 原型：`char* basename(char *pathfile);`
++ 简述：去掉文件`pathfile`的前缀，只保存文件名(input string:/data/test.cpp , output string:test.cpp)
++ 声明：`char* basename(char *pathfile);`
 + 参数：
   + `pathfile`  --  需要操作的文件
 + 返回值：
@@ -97,11 +97,11 @@
 
 ## readlink()
 
-+ 功能：
++ 简述：
   + readlink()会将参数path的 符号链接内容存储到参数buf所指的内存空间，返回的内容不是以\000作字符串结尾，但会将字符串的字符数返回，这使得添加\000变得简单。
   + 若参数bufsiz小于符号连接的内容长度，过长的内容会被截断，如果 readlink 第一个参数指向一个文件而不是 符号链接时，readlink 设 置errno 为 EINVAL 并返回 -1。 
   + readlink()函数组合了open()、read()和close()的所有操作
-+ 原型：`ssize_t readlink(const char *path, char *buf, size_t bufsize);`
++ 声明：`ssize_t readlink(const char *path, char *buf, size_t bufsize);`
 + 参数：
   + `path`  --  符号连接
   + `buf`   --  存储从`path`读取到的内容
@@ -115,8 +115,8 @@
 
 ## strdup()
 
-+ 功能：转储字符串，返回一个字符指针，其存储的内容和参数`s`相同，获得的内存是使用`malloc()`完成的，因此可以使用`free()`完成
-+ 原型：`char* strdup(const char *s);`
++ 简述：转储字符串，返回一个字符指针，其存储的内容和参数`s`相同，获得的内存是使用`malloc()`完成的，因此可以使用`free()`完成
++ 声明：`char* strdup(const char *s);`
 + 参数：
   + `s`  --  需要转储的字符串
 + 返回值：
@@ -124,8 +124,8 @@
 
 ## mkdir()
 
-+ 功能：创建一个目录`path`，并将文件权限设置为`mode`
-+ 原型：`int mkdir(const char *path, __model_t mode);`
++ 简述：创建一个目录`path`，并将文件权限设置为`mode`
++ 声明：`int mkdir(const char *path, __model_t mode);`
 + 参数：
   + `path`  --  目录文件路径
   + `model` --  创建的目录文件的权限
@@ -135,8 +135,8 @@
 
 ## chmod()
 
-+ 功能：将文件`file`的权限设置为`mode`
-+ 原型：`int chmod(const char* file, mode_t mode);`
++ 简述：将文件`file`的权限设置为`mode`
++ 声明：`int chmod(const char* file, mode_t mode);`
 + 参数：
   + `file`  --  需要修改的文件
   + `mode`  --  权限
@@ -146,8 +146,8 @@
 
 ## open()
 
-+ 功能：以指定模式打开指定文件
-+ 原型：`int open(const char *path, int __oflag, ...);`
++ 简述：以指定模式打开指定文件
++ 声明：`int open(const char *path, int __oflag, ...);`
 + 参数：
   + `path`  --  要操作的文件，绝对路径
   + `oflag` --  通常由一下常量通过或运算`I`组成
@@ -179,8 +179,8 @@
 
 ## atoi()
 
-+ 功能：把参数 str 所指向的字符串转换为一个整数（类型为 int 型）
-+ 原型：`int atoi(const char *str);`
++ 简述：把参数 str 所指向的字符串转换为一个整数（类型为 int 型）
++ 声明：`int atoi(const char *str);`
 + 参数：
   + `str`  -- 要转换为整数的字符串
 + 返回值：
@@ -189,8 +189,8 @@
 
 ## atol()
 
-+ 功能：把参数 str 所指向的字符串转换为一个长整数（类型为 long int 型）
-+ 原型：`long int atol(const char *str);`
++ 简述：把参数 str 所指向的字符串转换为一个长整数（类型为 long int 型）
++ 声明：`long int atol(const char *str);`
 + 参数：
   + `str` -- 要转换为长整数的字符串
 + 返回值
@@ -199,8 +199,8 @@
 
 ## atof()
 
-+ 功能：把参数 str 所指向的字符串转换为一个浮点数（类型为 double 型）
-+ 原型：`double atof(const char *str);`
++ 简述：把参数 str 所指向的字符串转换为一个浮点数（类型为 double 型）
++ 声明：`double atof(const char *str);`
 + 参数：
   + `str`  --  要转换为浮点数的字符串
 + 返回值：
@@ -209,8 +209,8 @@
 
 ## clock_gettime()
 
-+ 功能：获取当前时钟的时间，并保存到参数`tp`
-+ 原型：`int clock_gettime(clockid_t clock_id, struct timespec *tp);`
++ 简述：获取当前时钟的时间，并保存到参数`tp`
++ 声明：`int clock_gettime(clockid_t clock_id, struct timespec *tp);`
 + 参数：
   + `clock_id`  --  时钟ID
   + `tp`        --  `timespec` 结构体指针
@@ -222,8 +222,8 @@
 
 ## getline()
 
-+ 功能：从打开的文件流中按行读取，将保存行字符的缓冲区地址保存到`*line_ptr`
-+ 原型：`size_t getline(char **lineptr, size_t *n, FILE *stream);`
++ 简述：从打开的文件流中按行读取，将保存行字符的缓冲区地址保存到`*line_ptr`
++ 声明：`size_t getline(char **lineptr, size_t *n, FILE *stream);`
 + 参数：
   + `lineptr`  --  保存读取的字符的缓冲区
   + `n`        
@@ -238,11 +238,11 @@
 
 ## getdelim()
 
-+ 功能：
++ 简述：
   + 函数应从流读取，直到遇到与定界符字符匹配的字符为止。
   + 定界符参数是一个int，应用程序应确保其为终止读取过程的无符号字符表示的字符。
   + 如果定界符参数具有任何其他值，则行为是不确定的，换言之，从给定文件中读取流，遇到定界符参数就终止
-+ 原型：`_IO_ssize_t __getdelim(char **__restrict __lineptr, size_t *__restrict __n, int __delimiter, FILE *__restrict __stream);`
++ 声明：`_IO_ssize_t __getdelim(char **__restrict __lineptr, size_t *__restrict __n, int __delimiter, FILE *__restrict __stream);`
 + 参数：
   + `lineptr`  --  指向初始缓冲区或空指针的指针
   + `n`        --  指向初始缓冲区大小的指针
@@ -254,9 +254,9 @@
 
 ## iscntrl()
 
-+ 功能：检查所传的字符是否是控制字符
++ 简述：检查所传的字符是否是控制字符
   + 根据标准 ASCII 字符集，控制字符的 ASCII 编码介于 0x00 (NUL) 和 0x1f (US) 之间，以及 0x7f (DEL)，某些平台的特定编译器实现还可以在扩展字符集（0x7f 以上）中定义额外的控制字符
-+ 原型：`int iscntrl(int c);`
++ 声明：`int iscntrl(int c);`
 + 参数：
   + `c`  --  要检查的字符
 + 返回值：
@@ -267,8 +267,8 @@
 
 ## strcpy()
 
-+ 功能：把 `src` 所指向的字符串复制到 `dest`
-+ 原型：`char *strcpy(char *dest, const char *src);`
++ 简述：把 `src` 所指向的字符串复制到 `dest`
++ 声明：`char *strcpy(char *dest, const char *src);`
 + 参数：
   + dest  --  指向用于存储复制内容的目标数组
   + src   --  要复制的字符串
@@ -379,8 +379,8 @@
 
 ## fopen()
 
-+ 功能：使用给定的模式(mode)打开(filename)所指向的文件
-+ 原型： `FILE *fopen(const char *filename, const char *mode);`
++ 简述：使用给定的模式(mode)打开(filename)所指向的文件
++ 声明： `FILE *fopen(const char *filename, const char *mode);`
 + 参数：
   + `filename` -- 字符串，表示要打开的文件名称
   + `mode`     -- 字符串，表示文件的访问模式
@@ -397,8 +397,8 @@
 
 ## fwrite()
 
-+ 功能：把 `ptr` 所指向的数组中的数据写入到给定流 `stream` 中
-+ 原型：`size_t fwrite(const void *ptr, size_t size, size_t nmemb, FILE *stream);`
++ 简述：把 `ptr` 所指向的数组中的数据写入到给定流 `stream` 中
++ 声明：`size_t fwrite(const void *ptr, size_t size, size_t nmemb, FILE *stream);`
 + 参数：
   + `ptr`    -- 这是指向要被写入的元素数组的指针
   + `size`   -- 这是要被写入的每个元素的大小，以字节为单位
@@ -410,8 +410,8 @@
 
 ## fprintf()
 
-+ 功能：发送格式化输出到流 stream 中
-+ 原型：`int fprintf(FILE *stream, const char *format, ...);`
++ 简述：发送格式化输出到流 stream 中
++ 声明：`int fprintf(FILE *stream, const char *format, ...);`
 + 参数：
   + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流。
   + format -- 这是 C 字符串，包含了要被写入到流 stream 中的文本。
@@ -423,8 +423,8 @@
 
 ## fflush()
 
-+ 功能：刷新流 `stream` 的输出缓冲区
-+ 原型：`int fflush(FILE *stream);`
++ 简述：刷新流 `stream` 的输出缓冲区
++ 声明：`int fflush(FILE *stream);`
 + 参数：
   + `stream` -- 这是指向 `FILE` 对象的指针，该 `FILE` 对象指定了一个缓冲流
 + 返回值：
@@ -435,8 +435,8 @@
 
 ## fseek()
 
-+ 功能：设置流 `stream` 的文件位置为给定的偏移 `offset`，参数 `offset` 意味着从给定的 `whence` 位置查找的字节数。
-+ 原型：`int fseek(FILE *stream, long int offset, int whence);`
++ 简述：设置流 `stream` 的文件位置为给定的偏移 `offset`，参数 `offset` 意味着从给定的 `whence` 位置查找的字节数。
++ 声明：`int fseek(FILE *stream, long int offset, int whence);`
 + 参数：
   + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流
   + offset -- 这是相对 whence 的偏移量，以字节为单位
@@ -450,8 +450,8 @@
 
 ## ftell()
 
-+ 功能：返回给定流 stream 的当前文件位置
-+ 原型：`long int ftell(FILE *stream);`
++ 简述：返回给定流 stream 的当前文件位置
++ 声明：`long int ftell(FILE *stream);`
 + 参数：
   + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流
 + 返回值：
@@ -460,8 +460,8 @@
 
 ## fgets()
 
-+ 功能：从指定的流 stream 读取一行，并把它存储在 str 所指向的字符串内
-+ 原型：`char *fgets(char *str, int n, FILE *stream);`
++ 简述：从指定的流 stream 读取一行，并把它存储在 str 所指向的字符串内
++ 声明：`char *fgets(char *str, int n, FILE *stream);`
 + 参数：
   + str -- 这是指向一个字符数组的指针，该数组存储了要读取的字符串。
   + n -- 这是要读取的最大字符数（包括最后的空字符）。通常是使用以 str 传递的数组长度
@@ -475,8 +475,8 @@
 
 ## rewind()
 
-+ 功能：设置文件位置为给定流 `stream` 的文件的开头
-+ 原型：`void rewind(FILE *stream);`
++ 简述：设置文件位置为给定流 `stream` 的文件的开头
++ 声明：`void rewind(FILE *stream);`
 + 参数：
   + `stream` -- 这是指向 `FILE` 对象的指针，该 `FILE` 对象标识了流。
 + 返回值：
@@ -486,8 +486,8 @@
 
 ## access()
 
-+ 功能：确定文件或文件夹的访问权限。即，检查某个文件的存取方式，例如说是只读方式，只写方式等。
-+ 原型：`int access (const char *__name, int __type);`
++ 简述：确定文件或文件夹的访问权限。即，检查某个文件的存取方式，例如说是只读方式，只写方式等。
++ 声明：`int access (const char *__name, int __type);`
 + 参数
   + `name` -- 文件路径
   + `type` -- 判断参数
@@ -503,8 +503,8 @@
 
 ## remove()
 
-+ 功能：通过文件名称删除文件
-+ 原型：`int remove(const char* __filename);`
++ 简述：通过文件名称删除文件
++ 声明：`int remove(const char* __filename);`
 + 参数：
   + `filename`  --  指向文件名的字符指针
 + 需求：
@@ -512,8 +512,8 @@
 
 ## rename()
 
-+ 功能：重命名一个文件
-+ 原型：`int rename(const char* old, const char* new);`
++ 简述：重命名一个文件
++ 声明：`int rename(const char* old, const char* new);`
 + 参数：
   + `old`  --  旧的文件名
   + `new`  --  新的文件名
@@ -525,8 +525,8 @@
 
 ## assert()
 
-+ 功能：C库宏 允许诊断信息被写入到标准错误文件中。换句话说，它可用于在C程序中添加诊断
-+ 原型：`void assert(int expression)`
++ 简述：C库宏 允许诊断信息被写入到标准错误文件中。换句话说，它可用于在C程序中添加诊断
++ 声明：`void assert(int expression)`
 + 参数：
   + `expression` : 这可以是一个变量或任何C表达式。
     + 如果`expression`为真，`assert()`不执行任何动作。
@@ -534,8 +534,8 @@
 
 ## getenv()
 
-+ 功能：搜索 name 所指向的环境字符串，并返回相关的值给字符串，
-+ 原型：`#include <stdlib.h>  char* getenv (const char* name);`
++ 简述：搜索 name 所指向的环境字符串，并返回相关的值给字符串，
++ 声明：`#include <stdlib.h>  char* getenv (const char* name);`
 + 参数：
   + name  --  包含被请求变量名称的C字符串
 + 返回值：
@@ -547,26 +547,26 @@
 
 ## to_string()
 
-+ 功能:一个字符串对象，包含val作为字符序列的表示形式
-+ 原型：`string to_string(int val);`
++ 简述:一个字符串对象，包含val作为字符序列的表示形式
++ 声明：`string to_string(int val);`
 + 参数：
   + `val`  --  数值
 
 ## strcat()
 
-+ 功能：将源字符串的副本附加到目标字符串。目标中的终止空字符被源的第一个字符覆盖，并且在目标中两者连接形成的新字符串的末尾包含一个空字符。
-+ 原型：`char* strcat(char* destination, const char* source);`
++ 简述：将源字符串的副本附加到目标字符串。目标中的终止空字符被源的第一个字符覆盖，并且在目标中两者连接形成的新字符串的末尾包含一个空字符。
++ 声明：`char* strcat(char* destination, const char* source);`
 + 参数：
   + `destination` ： 指向目标数组的指针，它应该包含一个C字符串，并且足够大以包含连接的结果字符串。
   + `source` : 要附加的C字符串，这部应该与目标字符串相同。
 
 ## puts()
 
-+ 功能：
++ 简述：
   + 将字符串写入标准输出。将str指向的C字符串写入标准输出(stdout)并且附加一个换行符(`'\n'`)。
   + 该函数从指定的地址（str）开始复制，直到到达终止空字符（'\0')。此终止空字符不会复制到流中
   + 注意，puts不仅与fputs不同，它使用标准输出作为目标，而且它还在末尾自动附加一个环行符（fputs则没有）
-+ 原型：`int puts(const char* str);`
++ 声明：`int puts(const char* str);`
 + 参数：
   + `str` : 需要打印的C字符串
 + 返回值
@@ -575,8 +575,8 @@
 
 ## sprintf()
 
-+ 功能：发送格式化输出到str所指向的字符串
-+ 原型：` int sprintf(char *str, const char* format, ... )`
++ 简述：发送格式化输出到str所指向的字符串
++ 声明：` int sprintf(char *str, const char* format, ... )`
 + 参数：
   + `str`：这是指向一个字符数组的指针，该数组存储了C字符串
   + `format`:这是字符串，包含了要被写入到字符串`str`的文本。它可以包含嵌入的`format`标签，`format`标签可被随后的附加参数中指定的值替换，并按需求进行格式化。`format`标签属性是`%[flags][width][.precision][length]specifier`
@@ -605,8 +605,8 @@
   
 ## snprintf()
 
-+ 功能：将格式化的输出写入大小适中的缓冲区
-+ 原型：`int snprintf(char* s, size_t n, const char* format, ...);`
++ 简述：将格式化的输出写入大小适中的缓冲区
++ 声明：`int snprintf(char* s, size_t n, const char* format, ...);`
 + 参数：
   + `s` -- 指向存储C字符串的缓冲区的指针。这个缓冲区的大小至少要能存储`n`个字符
   + `n` -- 在缓冲区存储的最大字节数。通常，生成的字符串最大长度为`n-1`，留下一个空间存储空字符
@@ -618,10 +618,10 @@
 
 ## sscanf()
 
-+ 功能：
++ 简述：
   + 从s读取数据并根据参数格式将它们存储到附加参数给出的位置，就像使用了scanf一样，但从s而不是标准输入（stdin）读取数据。
   + 附加参数应该指向已分配的对象，其类型由格式字符串中的相应格式说明符指定。
-+ 原型：`int sscanf(const char* s, const char* format, ...);`
++ 声明：`int sscanf(const char* s, const char* format, ...);`
 + 参数：
   + `s`  --  存储数据的指针
   + `format`  --  格式化字符串
@@ -639,8 +639,8 @@
 
 ## strtok()
 
-+ 功能： 分解字符串 str 为一组字符串，delim 为分隔符
-+ 原型：`char *strtok(char *str, const char *delim);`
++ 简述： 分解字符串 str 为一组字符串，delim 为分隔符
++ 声明：`char *strtok(char *str, const char *delim);`
 + 参数：
   + str -- 要被分解成一组小字符串的字符串。
   + delim -- 包含分隔符的 C 字符串。
@@ -656,8 +656,8 @@
 
 ## strtok_r()
 
-+ 功能：linux下分割字符串的安全函数
-+ 原型：`char *strtok_r(char *str, const char *delim, char **saveptr);`
++ 简述：linux下分割字符串的安全函数
++ 声明：`char *strtok_r(char *str, const char *delim, char **saveptr);`
 + 参数：
   + str -- 要被分解成一组小字符串的字符串。
   + delim -- 包含分隔符的 C 字符串。
@@ -673,11 +673,11 @@
 
 ## strtol()
 
-+ 功能：
++ 简述：
   + 解析C字符串str，将其内容解释为指定基数的整数，该基数作为long int返回。如果endptr不是空指针，该函数还将endptr的值设置为指向数字后的第一个字符。
   + 该函数首先根据需要丢弃尽可能多的空白字符，直到找到第一个非空白字符。然后，从这个字符开始，按照依赖于基本参数的语法获取尽可能多的有效字符，并将它们解释为数值。
   + 最后，指向str中整数表示之后的第一个字符的指针存储在endptr指向的对象中。
-+ 原型：` long int strtol (const char* str, char** endptr, int base);`
++ 声明：` long int strtol (const char* str, char** endptr, int base);`
 + 参数：
   + `str`:以整数表示的C字符串开头(C-string beginning with the representation of an integral number)
   + `endptr`:引用`char*`类型的对象，其值由函数设置为`str`中数值之后的下一个字符。
@@ -688,39 +688,10 @@
 + 需求：
   + 头文件：`#include <stdlib.h>`
 
-## strcasecmp()
-
-+ 功能：比较参数s1和s2字符串，比较时会自动忽略大小写的差异
-+ 原型：`extern int strcasecmp(const char *__s1, const char *__s2)`
-+ 参数：
-  + `__s1`  -- 字符指针s1
-  + `__s2`  -- 字符指针s2
-+ 返回值：
-  + 若参数s1和s2字符串相等则返回0；
-  + s1大于s2，则返回大于0的值；
-  + s1小于s2则返回小于0的值
-+ 需求：
-  + 头文件：`#include <string.h>`
-  
-## strncasecmp()
-
-+ 功能：用来比较参数s1和s2字符串前n各字符，比较时会自动忽略大小写的差异
-+ 原型：` int strncasecmp(const char* s1, const char* s2, size_t n);`
-+ 参数：
-  + `s1`  -- 字符指针s1
-  + `s2`  -- 字符指针s2
-  + `n`   -- 字符数n
-+ 返回值
-  + 如果参数s1和s2字符串相同，则返回0
-  + s1若大于s2，则返回大于0的值
-  + s1若小于s2，则返回小于0的值
-+ 需求：
-  + 头文件：`#include <string.h>`
-
 ## reserve()
 
-+ 功能：请求更改容量
-+ 原型：`void reserve (size_type n);`
++ 简述：请求更改容量
++ 声明：`void reserve (size_type n);`
 + 参数：
   + `n` ： 向量的最小容量。
 
@@ -747,11 +718,11 @@
 
 ## std::get()
 
-+ 功能：
++ 简述：
   + 返回对元组`tpl`的第`I`个元素的引用。
   + 版本2将元组的右值作为引用参数，向前应用到返回的元素
   + 版本3将const元组作为参数，返回对元素的const引用
-+ 原型：
++ 声明：
     ```
       (1)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type& get(tuple<Types...>& tpl) noexcept;
       (2)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type&& get(tuple<Types...>&& tpl) noexcept;
@@ -766,8 +737,8 @@
 
 ## fstat()
 
-+ 功能：获取报告与打开的文件描述符`fildes`有关的文件的状态信息
-+ 原型：`int fstat(int __fd, struct stat *__buf);`
++ 简述：获取报告与打开的文件描述符`fildes`有关的文件的状态信息
++ 声明：`int fstat(int __fd, struct stat *__buf);`
 + 参数：
   + `__fd`  --  文件描述符
   + `__buf` --  内存区域指针，用户提供的缓冲区，`fstat`将信息写入这个缓冲区
@@ -779,8 +750,8 @@
 
 ## fmemopen()
 
-+ 功能：创建一个新的引用内存缓冲区的流
-+ 原型：`FILE* fmemopen(void *s, size_t len, const char *modes);`
++ 简述：创建一个新的引用内存缓冲区的流
++ 声明：`FILE* fmemopen(void *s, size_t len, const char *modes);`
 + 参数：
   + `s`     --  
   + `len`   -- 
@@ -801,7 +772,7 @@
 + Linux通过内存映像机制来提供用户程序对内存直接访问的能力。内存映像的意思是把内核中特定部分的内存空间映射到用户级程序的内存空间去。也就是说，用户空间和内核空间共享一块相同的内存。
 + 相对于传统的write/read IO系统调用，必需先把数据从磁盘拷贝至内核缓冲区（页缓冲），然后再把数据拷贝至用户进程中。两者相比，mmap会少一次拷贝数据，这样带来的性能提升是巨大的
 
-+ 原型：`void* mmap(void* addr, size_t length, int prot, int flags, int fd, off_t offset);`
++ 声明：`void* mmap(void* addr, size_t length, int prot, int flags, int fd, off_t offset);`
 + 参数
   + `addr` -- 指定文件应被映射到进程空间的起始地址，一般被指定一个空指针，此时选择起始地址的任务留给内核来完成
   + `length` -- 指的是映射到调用进程地址空间的字节数，它从被映射文件开头offset各字节开始算起
@@ -818,8 +789,8 @@
 
 ## munmap()
 
-+ 功能：解除任何内存映射
-+ 原型：`int munmap(void* __addr, size_t __len);`
++ 简述：解除任何内存映射
++ 声明：`int munmap(void* __addr, size_t __len);`
 + 参数：
   + `addr`  --  内存地址
   + `__len` --  内存地址大小
@@ -862,8 +833,8 @@
 
 ## clock_gettime()
 
-+ 功能：用于计算时间，有秒和纳秒两种精度
-+ 函数原型：`int clock_gettime(clockid_t clk_id, struct timespec *tp);`
++ 简述：用于计算时间，有秒和纳秒两种精度
++ 函数声明：`int clock_gettime(clockid_t clk_id, struct timespec *tp);`
 + 参数：
   + `clockid_t clk_id`有四种
     + `CLOCK_REALTIME` -- 系统实时时间，随系统实时时间改变而改变
@@ -873,8 +844,8 @@
 
 ## vsscanf()
 
-+ 功能：**将格式化数据从字符串读取到变量参数列表中**。从s读取数据并根据参数格式将它们存储到由arg标识的变量参数列表中的元素所指向的位置。
-+ 原型：`int vsscanf(const char* s, const char* format, va_list arg);`
++ 简述：**将格式化数据从字符串读取到变量参数列表中**。从s读取数据并根据参数格式将它们存储到由arg标识的变量参数列表中的元素所指向的位置。
++ 声明：`int vsscanf(const char* s, const char* format, va_list arg);`
   + 在内部，该函数从由arg标识的列表中检索参数，就好像在其上使用了`va_arg`一样，因此`arg`的状态可能会被调用更改。
   + 无论如何，`arg`应该在调用之前的某个时间点由`va_start`初始化，并且预计在调用之后的某个时间点由`va_end`释放。
 + 参数
@@ -888,8 +859,8 @@
 
 ## memset()
 
-+ 功能：将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
-+ 原型：`void* memset(void* ptr, int value, size_t num);`
++ 简述：将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
++ 声明：`void* memset(void* ptr, int value, size_t num);`
 + 参数
   + `ptr` -- 指向要填充的内存块的指针
   + `value` -- 要设置的值。该值作为int传递，但是该函数使用该值的转换的无符号字符填充内存块
@@ -899,8 +870,8 @@
 
 ## max()
 
-+ 功能：返回a和b中的最大值。如果两者相等，则返回a
-+ 原型：`template <class T> const T& max (const T& a, const T& b);`
++ 简述：返回a和b中的最大值。如果两者相等，则返回a
++ 声明：`template <class T> const T& max (const T& a, const T& b);`
 + 返回值
   + 作为参数传递的最大值
 
@@ -963,7 +934,7 @@
   + 分布式编程设计的主要特征是**分布和通信**。
     + 采用分布式程序设计方法设计程序时，一个程序由若干个可独立执行的程序模块组成。这些程序模块分布于一个分布式计算机系统的几台计算机上同时执行。
 
-    + 分布式程序设计语言与常用的各种程序设计语言的主要区别：在于它具有程序分布和通信的功能。**因此，分布式程序设计语言，往往可以由一种程序设计语言增加分布和通信的功能而构成**。    + 分布在各台计算机上的程序模块是相互关联的，它们在执行中需要交换数据，即**通信**。只有通过通信，各程序模块才能协调地完成一个共同的计算任务。
+    + 分布式程序设计语言与常用的各种程序设计语言的主要区别：在于它具有程序分布和通信的简述。**因此，分布式程序设计语言，往往可以由一种程序设计语言增加分布和通信的简述而构成**。    + 分布在各台计算机上的程序模块是相互关联的，它们在执行中需要交换数据，即**通信**。只有通过通信，各程序模块才能协调地完成一个共同的计算任务。
     + 采用分布式程序设计方法解决计算问题，必须提供用以进行分布式程序设计的语言和设计相应的分布式算法。
     + 分布式算法和适用于多处理器系统的并行算法，都具有并行执行的特点，但它们是有区别的。
       + 设计分布算法时，必须保证实现算法的各程序模块间不会有公共变量，它们只能通过通信来交换数据。此外，设计分布式算法时，往往需要考虑坚定性，即**当系统中几台计算机失效时，算法仍然是v有效的。
@@ -1039,14 +1010,14 @@
 
 + 和C语言一样，C++也允许甚至鼓励程序员将**组件函数**放在独立的文件中。
 
-+ 与其将结构声明加入到每一个文件中，不如将其放在头文件中，然后在每一个源代码文件中包含该头文件。这样，要修改结构声明时，只需要在头文件中做一次改动即可。另外，也可以将函数原型放在头文件中。
++ 与其将结构声明加入到每一个文件中，不如将其放在头文件中，然后在每一个源代码文件中包含该头文件。这样，要修改结构声明时，只需要在头文件中做一次改动即可。另外，也可以将函数声明放在头文件中。
 + 原来的程序分成三部分：
-  + 头文件，包含结构声明和使用这些结构的函数的原型
+  + 头文件，包含结构声明和使用这些结构的函数的声明
   + 源代码文件，包含与结构有关的函数的代码
   + 源代码文件，包含调用与结构相关的函数的代码
 
 + 头文件中常包含的内容：
-  + 函数原型
+  + 函数声明
   + 使用`#define`或`const`定义的符号常量
   + 结构声明
   + 类声明
@@ -1143,7 +1114,7 @@
   + 封装：由对象的概念支持。只需知道外部接口，不需知道内部实现，就可以使用的特性
   + 继承：由类的概念支持。利用已有的成果进行扩展，充分体现了代码重用
   + 多态：运行时特性
-  + 确定每个对象和类的功能，例如具体的属性和方法等。
+  + 确定每个对象和类的简述，例如具体的属性和方法等。
 
 + 面向对象的程序设计的步骤：
   + 找出问题中的对象和类
