--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -1,23 +1,23 @@
 ## 错误码
 
-+ `EPERM`		` 1`	 Operation not permitted 
-+ `ENOENT`		` 2`	 No such file or directory 
-+ `ESRCH`		` 3`	 No such process 
-+ `EINTR`		` 4`	 Interrupted system call 
++ `EPERM`	  	` 1`	 Operation not permitted 
++ `ENOENT` 		` 2`	 No such file or directory 
++ `ESRCH`		  ` 3`	 No such process 
++ `EINTR`		  ` 4`	 Interrupted system call 
 + `EIO`		    ` 5`	 I/O error 
-+ `ENXIO`		` 6`	 No such device or address 
-+ `E2BIG`		` 7`	 Argument list too long 
++ `ENXIO`		  ` 6`	 No such device or address 
++ `E2BIG`		  ` 7`	 Argument list too long 
 + `ENOEXEC`		` 8`	 Exec format error 
-+ `EBADF`		` 9`	 Bad file number 
++ `EBADF`		  ` 9`	 Bad file number 
 + `ECHILD`		`10`	 No child processes 
 + `EAGAIN`		`11`	 Try again 
 + `ENOMEM`		`12`	 Out of memory 
 + `EACCES`		`13`	 Permission denied 
 + `EFAULT`		`14`	 Bad address 
 + `ENOTBLK`		`15`	 Block device required 
-+ `EBUSY`		`16`	 Device or resource busy 
++ `EBUSY`		  `16`	 Device or resource busy 
 + `EEXIST`		`17`	 File exists 
-+ `EXDEV`		`18`	 Cross-device link 
++ `EXDEV`		  `18`	 Cross-device link 
 + `ENODEV`		`19`	 No such device 
 + `ENOTDIR`		`20`	 Not a directory 
 + `EISDIR`		`21`	 Is a directory 
@@ -26,13 +26,13 @@
 + `EMFILE`		`24`	 Too many open files 
 + `ENOTTY`		`25`	 Not a typewriter 
 + `ETXTBSY`		`26`	 Text file busy 
-+ `EFBIG`		`27`	 File too large 
++ `EFBIG`		  `27`	 File too large 
 + `ENOSPC`		`28`	 No space left on device 
 + `ESPIPE`		`29`	 Illegal seek 
-+ `EROFS`		`30`	 Read-only file system 
++ `EROFS`		  `30`	 Read-only file system 
 + `EMLINK`		`31`	 Too many links 
-+ `EPIPE`		`32`	 Broken pipe 
-+ `EDOM`		`33`	 Math argument out of domain of func 
++ `EPIPE`		  `32`	 Broken pipe 
++ `EDOM`		  `33`	 Math argument out of domain of func 
 + `ERANGE`		`34`	 Math result not representable 
 
 ## jsoncpp
@@ -287,18 +287,23 @@
 
 ## sys/socket.h
 
++ 套接字常量、类型和函数的声明。
+
 ### socket()
 
 + 功能：创建一个`type`类型，`domain`协议簇，`protocol`通信协议的socket，并返回一个文件描述符
 + 原型：`int socket(int domain, int type, int protocol);`
 + 参数：
-  + `domain`  --  选择所用的协议族，AF_INET，代表IPv4
+  + `domain`  --  选择所用的协议族
+    + `AF_INET`，代表IPv4
+    + `AF_INET6`，代表IPv6
   + `type`    --  
     + `SOCK_STREAM`, 表示有序，可靠，双工，面向连接的字节流，通常由TCP实现
-    + `SOCK_DGRAM`， 通过定长的，不可靠消息提供无连接通信，通常由UDP实现
+    + `SOCK_DGRAM`,  通过定长的，不可靠消息提供无连接通信，通常由UDP实现
   + `protocol` -- 指定特定的通信type使用的协议。
     + 在大多数实现中，每个type参数只能使用一种协议。
-    + 例如，`SOCK_STREAM`使用`TCP`， `SOCK_DGRAM`使用`UDP`
+    + `SOCK_STREAM`,使用`IPPROTO_TCP`
+    + `SOCK_DGRAM`, 使用`IPPROTO_UDP`
     + 如果参数为0，则默认设置为1
 + 返回值：
   + 成功  --  返回文件描述符
@@ -309,15 +314,18 @@
 + 功能：创建两个`type`类型，`domain`协议簇，`protocol`通信协议的，互相连接的socket，将文件描述符放在`fds[0]`和`fds[1]`
 + 原型：`int socketpair(int domain, int type, int protocol, int fds[2]);`
 + 参数：
-  + `domain`  --  选择所用的协议族，AF_INET，代表IPv4
+  + `domain`  --  选择所用的协议族
+    + `AF_INET`，代表IPv4
+    + `AF_INET6`，代表IPv6
   + `type`    --  
     + `SOCK_STREAM`, 表示有序，可靠，双工，面向连接的字节流，通常由TCP实现
-    + `SOCK_DGRAM`， 通过定长的，不可靠消息提供无连接通信，通常由UDP实现
+    + `SOCK_DGRAM`,  通过定长的，不可靠消息提供无连接通信，通常由UDP实现
   + `protocol` -- 指定特定的通信type使用的协议。
     + 在大多数实现中，每个type参数只能使用一种协议。
-    + 例如，`SOCK_STREAM`使用`TCP`， `SOCK_DGRAM`使用`UDP`
+    + `SOCK_STREAM`,使用`IPPROTO_TCP`
+    + `SOCK_DGRAM`, 使用`IPPROTO_UDP`
     + 如果参数为0，则默认设置为1
-  + `fds[2]`  --  存放两个文件描述符的数组
+  + `fds[2]`  --  存放两个文件描述符的数组  --  Input/Output
 + 返回值：
   + 成功  --  返回0
   + 失败  --  返回-1
@@ -327,7 +335,7 @@
 + 功能：将套接字通信端点的句柄(`socket FD`)与一个特定的逻辑网络连接关联起来
 + 原型：`int bind(int fd, const struct sockaddr *address, socklen_t address_len);`
 + 参数：
-  + `socket`   --  通信端点的文件描述符
+  + `fd`       --  通信端点的文件描述符
   + `address`  --  关联的地址
   + `len`      --  地址字节长度(the local address which is LEN bytes long)
 + 返回值：
@@ -457,3 +465,205 @@
 + 返回值：
   + 成功  --  返回0
   + 失败  --  返回-1
+
+## bits/socket.h
+
++ 特定于系统的套接字常量和类型
++ 这个特定于操作系统的头文件定义了`SOCK_*`、`PF_*`、`AF_*`、`MSG_*`、`SOL_*`和`SO_*`常量，以及`struct sockaddr `、`struct msghdr `和`struct linger `类型。
+
+### struct sockaddr
+
++ 简述：描述通用套接字地址的结构
++ 声明：
+  ```
+    struct sockaddr
+      {
+        __SOCKADDR_COMMON (sa_);	/* Common data: address family and length.  地址族 */
+        char sa_data[14];		/* Address data.  14字节，包含套接字中的目标地址和端口信息    */
+      };
+  ```
++ 注意：
+  + 结构体用来处理网络通信的地址。
+  + sockaddr的缺陷是：sa_data把目标地址和端口信息混在一起了，
+
+## netinet/in.h
+
++ 网络协议相关数据结构的声明和定义
+
++ 简述：描述因特网套接字地址的结构
++ 声明：
+  ```
+    struct sockaddr_in
+      {
+        __SOCKADDR_COMMON (sin_);   /* Address Family.   地址族 */
+        in_port_t sin_port;			    /* Port number.      16位TCP/UDP端口号 */
+        struct in_addr sin_addr;		/* Internet address. 32位IP地址  */
+
+        /* Pad to size of `struct sockaddr'.  不使用*/
+        unsigned char sin_zero[sizeof (struct sockaddr) -
+    			   __SOCKADDR_COMMON_SIZE -
+    			   sizeof (in_port_t) -
+    			   sizeof (struct in_addr)];
+      };
+  ```
++ 注意：
+  + 结构体用来处理网络通信的地址。
+  + 该结构体解决了sockaddr的缺陷，把port和addr 分开储存在两个变量中
+  + 该结构体中提到的另一个结构体in_addr定义如下
+     ```
+        /* Internet address.  */
+        typedef uint32_t in_addr_t;
+        struct in_addr
+          {
+            in_addr_t s_addr;
+          };
+     ```
+  + `sin_port`和`sin_addr`都必须是网络字节序（`NBO`），一般可视化的数字都是主机字节序（`HBO`）
+
+## sockaddr_in和sockaddr
+
++ 二者长度一样，都是16个字节，即占用的内存大小是一致的，因此可以互相转化。
++ 二者是并列结构，指向`sockaddr_in`结构的指针也可以指向`sockaddr`
+
++ `sockaddr`常用于`bind`、`connect`、`recvfrom`、`sendto`等函数的参数，指明地址信息，是一种通用的套接字地址。
++ `sockaddr_in` 是internet环境下套接字的地址形式。所以在网络编程中我们会对`sockaddr_in`结构体进行操作，使用`sockaddr_in`来建立所需的信息，最后使用类型转化就可以了。
+
++ 一般先把`sockaddr_in`变量赋值后，强制类型转换后传入用`sockaddr`做参数的函数：
+  + `sockaddr_in`用于socket定义和赋值；
+  + `sockaddr`用于函数参数
+
++ 另外 -- 两个函数 htons() 和 inet_addr()
+  + `htons()`作用是将端口号由主机字节序转换为网络字节序的整数值。(`host to net`)
+  + `inet_addr()`作用是将一个`IP`字符串转化为一个网络字节序的整数值，用于`sockaddr_in.sin_addr.s_addr`
+  + `inet_ntoa()`作用是将一个`sin_addr`结构体输出成`IP`字符串(`network to ascii`)，例如
+    + `printf("%s",inet_ntoa(mysock.sin_addr));`
+  + `htonl()`作用和`htons()`一样，不过它针对的是32位的（`long`），而`htons()`针对的是两个字节，16位的（`short`）
+  + 与`htonl()`和`htons()`作用相反的两个函数是：`ntohl()`和`ntohs()`
+  + 它们的声明都在文件`netinet/in.h`中
+
+## bits/sockaddr.h
+
++ `struct sockaddr_*`通用成员和大小的定义，通用版本。
+
++ `#define	__SOCKADDR_COMMON(sa_prefix) sa_family_t sa_prefix##family`
++ 这个宏用于声明用于套接字地址的数据类型的初始公共成员，`struct sockaddr `、`struct sockaddr_in `、`struct sockaddr_un `等。
+
+## arpa/inet.h
+
+### inet_addr()
+
++ 简述：将互联网主机地址从数字和点符号在CP转换成二进制数据在网络字节顺序
++ 声明：`in_addr_t inet_addr (const char *cp);`
++ 参数：
++ 返回值：
+
+### inet_lnaof()
+
++ 简述：在`in`返回Internet地址的本地主机地址部分。
++ 声明：`in_addr_t inet_lnaof(struct in_addr in);`
++ 参数：
++ 返回值：
+
+### inet_makeaddr()
+
++ 简述：将网络编号NET与本机地址主机相结合，使Internet主机地址按网络字节序排列
++ 声明：`struct in_addr inet_makeaddr (in_addr_t net, in_addr_t host);`
++ 参数：
++ 返回值：
+
+### inet_netof()
+
++ 简述：返回网络号码部分的互联网地址
++ 声明：`in_addr_t inet_netof (struct in_addr in);`
++ 参数：
++ 返回值：
+
+### inet_network()
+
++ 简述：从CP开始的数字加点格式的地址中提取网络字节顺序的网络号
++ 声明：`in_addr_t inet_network (const char *cp);`
++ 参数：
++ 返回值：
+
+### inet_ntoa()
+
++ 简述：将`in`中的因特网数字转换为`ASCII`表示。返回值是一个指向包含该字符串的内部数组的指针
++ 声明：`char *inet_ntoa (struct in_addr in);`
++ 参数：
++ 返回值：
+
+### inet_pton()
+
++ 简述：从CP开始的缓冲区中Internet数字的表示格式转换为二进制网络格式，并将接口类型AF的结果存储在从BUF开始的缓冲区中
++ 声明：`int inet_pton (int af, const char *cp, void *buf);`
++ 参数：
++ 返回值：
+
+## strings.h
+
+### bcmp()
+
++ 简述：比较S1和S2的N个字节(与memcmp相同)
++ 声明：`int bcmp (const void *s1, const void *s2, size_t n);`
++ 参数：
++ 返回值：
+
+### bcopy()
+
++ 简述：复制N字节的SRC到DEST(类似于memmove，但参数是相反的)
++ 声明：`int bcopy (const void *src, void *dest, size_t n);`
++ 参数：
++ 返回值：
+
+### bzero()
+
++ 简述：设置S的N个字节为0
++ 声明：`void bzero (void *s, size_t n);`
++ 参数：
++ 返回值：
+
+### ffs()
+
++ 简述：返回`I`中设置的第一个比特位的位置，如果没有设置，则返回0。最低有效位是位置1，最高有效位是32
++ 声明：`int ffs (int i);`
++ 参数：
++ 返回值：
+
+### strcasecmp()
+
++ 简述：比较参数s1和s2字符串，比较时会自动忽略大小写的差异
++ 声明：`extern int strcasecmp (const char *s1, const char *s2)`
++ 参数：
+  + `__s1`  -- 字符指针s1
+  + `__s2`  -- 字符指针s2
++ 返回值：
+  + 若参数s1和s2字符串相等则返回0；
+  + s1大于s2，则返回大于0的值；
+  + s1小于s2则返回小于0的值
+  
+### strncasecmp()
+
++ 简述：用来比较参数s1和s2字符串前n各字符，比较时会自动忽略大小写的差异
++ 声明：` int strncasecmp (const char* s1, const char* s2, size_t n);`
++ 参数：
+  + `s1`  -- 字符指针s1
+  + `s2`  -- 字符指针s2
+  + `n`   -- 字符数n
++ 返回值
+  + 如果参数s1和s2字符串相同，则返回0
+  + s1若大于s2，则返回大于0的值
+  + s1若小于s2，则返回小于0的值
+
+### strcasecmp_l()
+
++ 简述：使用LOC中的排序规则比较S1和S2，忽略大小写
++ 声明：`int strcasecmp_l (const char *s1, const char *s2, locale_t loc);`
++ 参数：
++ 返回值：
+
+### strncasecmp_l()
+
++ 简述：使用LOC中的排序规则，不超过N个字符的S1和S2进行比较，忽略大小写
++ 声明：`int strncasecmp_l (const char *s1, const char *s2, size_t n, locale_t loc);`
++ 参数：
++ 返回值：
