--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -139,18 +139,18 @@
   + 用于读取，准确说是用于将字符串或者文件输入流转换为Json::Value对象的
   + `parse()`
   + 使用`Json::Reader`对`json`文件进行解析
-    + 原型：`bool parse(const std::string& document, Value& root, bool collectComments = true);`
+    + 声明：`bool parse(const std::string& document, Value& root, bool collectComments = true);`
     + 参数：
       + `root`:（输出）Json::Value的对象
   + 使用Json::Reader对json输入流（文件）进行解析
-    + 原型：`bool parse(std:stream& is, Value& root, bool collectComment = true);`
+    + 声明：`bool parse(std:stream& is, Value& root, bool collectComment = true);`
   + 使用Json::Reader对字符串进行解析
-    + 原型：`bool parse(const char* beginDoc, const char* ednDoc, Value& root, bool collectComment = true);`
+    + 声明：`bool parse(const char* beginDoc, const char* ednDoc, Value& root, bool collectComment = true);`
 
 ### JsonCpp其他操作
 
 + 判断key是否存在
-  + 原型：`bool Json::Value::isMember ( const char * key) const；`
+  + 声明：`bool Json::Value::isMember ( const char * key) const；`
   + 存在返回1，否则返回0
 
 + 判断是否为null成员函数
@@ -213,7 +213,7 @@
   + 文件开头有`__BEGIN_DECLS`
   + 文件结尾有`__END_DECLS`
 
-+ 它们是两个宏定义，原型为：
++ 它们是两个宏定义，声明为：
   + `#define __BEGIN_DECLS extern "C"{`
   + `#define __END_DECLS   }`
 
@@ -221,8 +221,8 @@
 
 ### epoll_create()
 
-+ 功能：创建一个关联`size`个文件的epoll实例
-+ 原型：`int epoll_create(int size);`
++ 简述：创建一个关联`size`个文件的epoll实例
++ 声明：`int epoll_create(int size);`
 + 参数：
   + `size`  --  关联文件的个数
 + 返回值：
@@ -231,8 +231,8 @@
 
 ### epoll_create1()
 
-+ 功能：创建一个标记为`flag`的epoll实例
-+ 原型：`int epoll_create1(int flags);`
++ 简述：创建一个标记为`flag`的epoll实例
++ 声明：`int epoll_create1(int flags);`
 + 参数：
   + `flag`  --  
 + 返回值：
@@ -243,8 +243,8 @@
 
 ### epoll_ctl()
 
-+ 功能：修改一个`epfd` epoll实例
-+ 原型：`int epoll_ctl(int epfd, int op, int fd, struct epoll_event *event);`
++ 简述：修改一个`epfd` epoll实例
++ 声明：`int epoll_ctl(int epfd, int op, int fd, struct epoll_event *event);`
 + 参数：
   + `epfd`  --  要操作的epoll实例
   + `op`    --  要执行的行为
@@ -260,8 +260,8 @@
 
 ### epoll_wait()
 
-+ 功能：在一个epoll实例`opfd`中等待某一事件发生
-+ 原型：`int epoll_wait(int epfd, struct epoll_event *events, int maxevents, int timeout);`
++ 简述：在一个epoll实例`opfd`中等待某一事件发生
++ 声明：`int epoll_wait(int epfd, struct epoll_event *events, int maxevents, int timeout);`
 + 参数：
   + `epfd`  --  要操作的epoll实例
   + `events` -- 指向存放触发事件的缓冲区的结构体指针
@@ -273,8 +273,8 @@
 
 ### epoll_pwait()
 
-+ 功能：和`epoll_wait()`相似，增加了信号掩码，临时且原子
-+ 原型：`int epoll_pwait(int epfd, struct epoll_event *events, int maxevents, int timeout, const sigset_t *ss);`
++ 简述：和`epoll_wait()`相似，增加了信号掩码，临时且原子
++ 声明：`int epoll_pwait(int epfd, struct epoll_event *events, int maxevents, int timeout, const sigset_t *ss);`
 + 参数：
   + `epfd`  --  要操作的epoll实例
   + `events` -- 指向存放触发事件的缓冲区的结构体指针
@@ -291,8 +291,8 @@
 
 ### socket()
 
-+ 功能：创建一个`type`类型，`domain`协议簇，`protocol`通信协议的socket，并返回一个文件描述符
-+ 原型：`int socket(int domain, int type, int protocol);`
++ 简述：创建一个`type`类型，`domain`协议簇，`protocol`通信协议的socket，并返回一个文件描述符
++ 声明：`int socket(int domain, int type, int protocol);`
 + 参数：
   + `domain`  --  选择所用的协议族
     + `AF_INET`，代表IPv4
@@ -311,8 +311,8 @@
 
 ### socketpair()
 
-+ 功能：创建两个`type`类型，`domain`协议簇，`protocol`通信协议的，互相连接的socket，将文件描述符放在`fds[0]`和`fds[1]`
-+ 原型：`int socketpair(int domain, int type, int protocol, int fds[2]);`
++ 简述：创建两个`type`类型，`domain`协议簇，`protocol`通信协议的，互相连接的socket，将文件描述符放在`fds[0]`和`fds[1]`
++ 声明：`int socketpair(int domain, int type, int protocol, int fds[2]);`
 + 参数：
   + `domain`  --  选择所用的协议族
     + `AF_INET`，代表IPv4
@@ -332,8 +332,8 @@
 
 ### bind()
 
-+ 功能：将套接字通信端点的句柄(`socket FD`)与一个特定的逻辑网络连接关联起来
-+ 原型：`int bind(int fd, const struct sockaddr *address, socklen_t address_len);`
++ 简述：将套接字通信端点的句柄(`socket FD`)与一个特定的逻辑网络连接关联起来
++ 声明：`int bind(int fd, const struct sockaddr *address, socklen_t address_len);`
 + 参数：
   + `fd`       --  通信端点的文件描述符
   + `address`  --  关联的地址
@@ -344,8 +344,8 @@
 
 ### getsockname()
 
-+ 功能：通过本地文件描述符的地址和长度(单位:byte)，获取socket名字
-+ 原型：`int getsockname(int fd, const struct sockaddr *address, socklent *len);`
++ 简述：通过本地文件描述符的地址和长度(单位:byte)，获取socket名字
++ 声明：`int getsockname(int fd, const struct sockaddr *address, socklent *len);`
 + 参数：
   + `fd`  --  文件描述符
   + `address`  --  地址
@@ -356,8 +356,8 @@
 
 ### connect()
 
-+ 功能：创建一个socket文件描述符和地址的连接
-+ 原型：`int connect(int fd, const struct sockaddr *addr, socklent_t len);`
++ 简述：创建一个socket文件描述符和地址的连接
++ 声明：`int connect(int fd, const struct sockaddr *addr, socklent_t len);`
 + 参数：
   + `fd`  --  文件描述符
   + `addr` --  要连接的地址
@@ -366,10 +366,17 @@
   + 成功  --  返回0
   + 失败  --  返回-1
 
+### send()
+
++ 简述：发送N字节的BUF到socket FD。返回发送的数字或-1。
++ 声明：`ssize_t send (int fd, const void *buf, size_t n, int flags);`
++ 参数：
++ 返回值：
+
 ### recv()
 
-+ 功能：从socket FD中读取N个字节，并输入到BUF中
-+ 原型：`ssize_t recv(int fd, void *buf, size_t n, int flags);`
++ 简述：从socket FD中读取N个字节，并输入到BUF中
++ 声明：`ssize_t recv(int fd, void *buf, size_t n, int flags);`
 + 参数：
   + `fd`  --  文件描述符
   + `buf` --  要存放的缓冲区
@@ -381,8 +388,8 @@
 
 ### sendto()
 
-+ 功能：在socket FD上向地址ADDR(长度为ADDR_LEN)发送N个字节的BUF
-+ 原型：
++ 简述：在socket FD上向地址ADDR(长度为ADDR_LEN)发送N个字节的BUF
++ 声明：
   + `ssize_t sendto(int fd, const void *buf, size_t n, int flags, const struct *addr, socklen_t addr_len);`
 + 参数：
 + 返回值：
@@ -391,8 +398,8 @@
 
 ### recvfrom()
 
-+ 功能：通过socket FD读取N个字节到BUF
-+ 原型：`ssize_t recvfrom(int fd, void *buf, size_t n, int flags, const struct *addr, socklen_t addr_len);`
++ 简述：通过socket FD读取N个字节到BUF
++ 声明：`ssize_t recvfrom(int fd, void *buf, size_t n, int flags, const struct *addr, socklen_t addr_len);`
 + 参数：
 + 返回值：
   + 成功  --  返回读取的字节数
@@ -402,8 +409,8 @@
 
 ### sendmsg()
 
-+ 功能：在socket FD上发送一个由MESSAGE描述的信息
-+ 原型：`ssize_t sendmsg(int fd, const struct msghdr *message, int flags);`
++ 简述：在socket FD上发送一个由MESSAGE描述的信息
++ 声明：`ssize_t sendmsg(int fd, const struct msghdr *message, int flags);`
 + 参数：
 + 返回值：
   + 成功  --  返回发送的字节数
@@ -411,8 +418,8 @@
 
 ### recvmsg()
 
-+ 功能：从socket FD接收一个由MESSAGE描述的信息
-+ 原型：`ssize_t recvmsg(int fd, struct msghdr *message, int flags);`
++ 简述：从socket FD接收一个由MESSAGE描述的信息
++ 声明：`ssize_t recvmsg(int fd, struct msghdr *message, int flags);`
 + 参数：
 + 返回值：
   + 成功  --  返回接收到的字节数
@@ -420,42 +427,42 @@
 
 ### getsockopt()
 
-+ 功能：将套接字`FD`的选项`OPTNAME`在协议级别`level`上的当前值放入`OPTVAL` (`*OPTLEN`字节长)，并将`*OPTLEN`设置为该值的实际长度
-+ 原型：`int getsockopt(int fd, int level, int optname, void *optval, socklen_t *optlen);`
++ 简述：将套接字`FD`的选项`OPTNAME`在协议级别`level`上的当前值放入`OPTVAL` (`*OPTLEN`字节长)，并将`*OPTLEN`设置为该值的实际长度
++ 声明：`int getsockopt(int fd, int level, int optname, void *optval, socklen_t *optlen);`
 + 返回值：
   + 成功  --  返回接收到的字节数
   + 失败  --  返回-1
 
 ### setsockopt()
 
-+ 功能：设置套接字FD的选项OPTNAME在协议级别level为*OPTVAL (OPTLEN字节长)
-+ 原型：`int setsockopt(int fd, int level, int optname, const void *optval, socklen_t optlen);`
++ 简述：设置套接字FD的选项OPTNAME在协议级别level为*OPTVAL (OPTLEN字节长)
++ 声明：`int setsockopt(int fd, int level, int optname, const void *optval, socklen_t optlen);`
 + 返回值：
   + 成功  --  返回接收到的字节数
   + 失败  --  返回-1
 
 ### listen()
 
-+ 功能：准备接受套接字FD上的连接。在进一步的请求被拒绝之前，将有N个连接请求排队
-+ 原型：`int listen(int fd, int n);`
++ 简述：准备接受套接字FD上的连接。在进一步的请求被拒绝之前，将有N个连接请求排队
++ 声明：`int listen(int fd, int n);`
 + 返回值：
   + 成功  --  返回接收到的字节数
   + 失败  --  返回-1
 
 ### accept()
 
-+ 功能：在套接字FD上等待连接.
++ 简述：在套接字FD上等待连接.
   + 当连接到达时，打开一个新的套接字与之通信，将`*ADDR (*ADDR_LEN字节长)`设置为连接对等体的地址，将`*ADDR_LEN`设置为地址的实际长度，
   + 并返回新套接字的描述符，错误则返回-1
-+ 原型：`int accept(int fd, const struct sockaddr *addr, socklen_t *addr_len);`
++ 声明：`int accept(int fd, const struct sockaddr *addr, socklen_t *addr_len);`
 + 返回值：
   + 成功  --  新套接字的描述符
   + 失败  --  返回-1
 
 ### shutdown()
 
-+ 功能：关闭套接字FD上打开的全部或部分连接
-+ 原型：`int shutdown(int fd, int how);`
++ 简述：关闭套接字FD上打开的全部或部分连接
++ 声明：`int shutdown(int fd, int how);`
 + 参数：
   + `fd`  --  套接字文件描述符
   + `how`  --
