--- a/VideoProcess/产品部署指导文档.md
+++ b/VideoProcess/产品部署指导文档.md
@@ -91,6 +91,8 @@ ln -s /usr/local/python3/bin/pip3.8 /usr/bin/pip38
 ## 安装工程中所需的所有依赖!!!!! 最高优先级
 /{PYTHONPATH}/python38 -m pip install -i https://pypi.tuna.tsinghua.edu.cn/simple -r /{PATH}/dagger/requirements.txt
 
+-i http://pypi.douban.com/simple/ --trusted-host=pypi.douban.com/simple 
+
 ##配置环境变量
 export PYTHONPATH=${PYTHONPATH}:/system/lib
 
