--- a/CPP/C-C++04.md
+++ b/CPP/C-C++04.md
@@ -435,7 +435,7 @@
 
 ### setsockopt()
 
-+ 简述：设置套接字FD的选项OPTNAME在协议级别level为*OPTVAL (OPTLEN字节长)
++ 简述：设置套接字`FD`的选项`OPTNAME`在协议级别`level`为`*OPTVAL` (`OPTLEN`字节长)
 + 声明：`int setsockopt(int fd, int level, int optname, const void *optval, socklen_t optlen);`
 + 返回值：
   + 成功  --  返回接收到的字节数
