--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -278,6 +278,19 @@
 + 注意：
   + 如果目标数组 dest 不够大，而源字符串的长度又太长，可能会造成缓冲溢出的情况
 
+## strncpy()
+
++ 简述：把 src 所指向的字符串复制到 dest，最多复制 n 个字符。当 src 的长度小于 n 时，dest 的剩余部分将用空字节填充。
++ 声明：`char *strncpy(char *dest, const char *src, size_t n);`
++ 参数：
+  + `dest`  --  指向用于存储复制内容的目标数组。
+  + `src`   --  要复制的字符串。
+  + `n`     --  要从源中复制的字符数。
++ 返回值：
+  + 返回最终复制的字符串
++ 注意：
+  + strncpy 没有自动加上终止符的，需要手动加上不然会出问题的。
+
 ## `stdio.h` 库宏
 
 + `NULL`    -- 这个宏是一个空指针常量的值。
