--- a/CPP/C-C++03.md
+++ b/CPP/C-C++03.md
@@ -856,6 +856,9 @@
 
 ### const修饰类成员函数
 
++ 只有类的成员函数才能在函数名后面加上 const ，这时成员函数称为 **常量成员函数**。
++ 常量成员函数在执行期间**不能修改成员变量的值**（静态成员变量除外），也不能调用同一个类中的非常量成员函数（同样的静态成员函数除外）
+
 + const 修饰类成员函数，其目的是防止成员函数修改被调用对象的值，如果我们不想修改一个调用对象的值，所有的成员函数都应当声明为const成员函数。
 + 注意：
   + const关键字不能与static关键字同时使用，因为static关键字修饰静态成员函数，静态成员函数不含有this指针，即不能实例化，const成员函数必须具体到某一实例
@@ -863,3 +866,64 @@
 + 如果有个成员函数想修改对象中的某一个成员怎么办？
   + 这时我们可以使用`mutable`关键字修饰这个成员，
   + `mutable`的意思也是易变的，容易改变的意思，被`mutable`关键字修饰的成员可以处于不断变化中
+
+## override 重载
+
++ 当在父类中使用了虚函数的时候，可能需要在某个子类中对这个虚函数进行重写，以下方法都可以：
+  ```
+    class A
+    {
+        virtual void foo();
+    }
+
+    class B :public A
+    {
+        void foo(); //OK
+        virtual foo(); // OK
+        void foo() override; //OK
+    }
+  ``` 
+
++ 如果不适用 override， 当把`foo()`写成`foO()`时，编译器并不会报错，因为它并不知道你的目的是重写虚函数，而是把它当成了新的函数。如果这个函数很重要的话，那就会对整个程序不利
++ 所以，override的作用就出来了： 它指定了子类的这个虚函数是重写的父类的。如果名字不小心打错了，编译器是不会编译通过的，例如：
+  ```
+    class A
+    {
+        virtual void foo();
+    };
+
+    class B :A
+    {
+        virtual void f00(); //OK
+        virtual void f0o()override; //Error 
+    };
+  ``` 
+
++ 为了减少程序的运行时错误，还是养成重写虚函数加上 override 的习惯
+
+## final
+
++ 当不希望某个类被继承，或者不希望某个虚函数被重写，可以在类名和虚函数后添加`final`关键字。
++ 添加`final`关键字后被继承或重写，编译器会报错
++ 示例
+  ```
+    class Base
+    {
+        virtual void foo();
+    };
+     
+    class A : Base
+    {
+        void foo() final; // foo 被override并且是最后一个override，在其子类中不可以重写
+        void bar() final; // Error: 父类中没有 bar虚函数可以被重写或final
+    };
+
+    class B final : A // 指明B是不可以被继承的
+    {
+        void foo() override; // Error: 在A中已经被final了
+    };
+     
+    class C : B // Error: B is final
+    {
+    };
+  ``` 
