--- a/CPP/C-C++05.md
+++ b/CPP/C-C++05.md
@@ -119,3 +119,66 @@
           return 0;
       }
     ``` 
+
+## C++11中变量初始化方法汇总
+
++ 参考资料：`https://blog.csdn.net/Q1302182594/article/details/47423347`
+
+### 1.1 背景
+
++ 在C++语言中，初始化 和 赋值 并不是同一个概念
+  + 初始化：创建变量时赋予其一个初始值
+  + 赋值：把对象（已经创建）的 当前值 擦除，而用一个新值来代替
+
+### 1.2 列表初始化
+
++ 作为C++11新标准的一部分，用花括号来初始化变量得到了全面应用（在此之前，只是在初始化数组的时候用到）
++ 列表初始化有两种形式:
+  + `int a = {0};  //  列表初始化方式1`
+  + `int a{0};     //  列表初始化方式2`
++ 上述的两种方式都可以将变量a初始化为0
+
++ 当对内置类型使用列表初始化时，若初始值存在丢失的风险，编译将报错，如：
+  ```
+    int a = 3.14;   // 正确，虽然会丢失小数部分，但是编译器不报错。
+    int a = {3.14}; // 错误，因为将会丢失小数部分（其实，g++只是对此提示警告而已，并非错误）。
+  ``` 
+
++ 由花括号括起来的初始值，不仅可以用于初始化变量，还可以用于为对象（旧变量）赋新值。
+  ```
+    int a = 1;   // 定义变量，并且初始化为1
+    a = {3};     // 为变量a赋新值3
+  ``` 
+
++ 用处：
+  + 可以用在任何需要变量初始化的地方，例如第6章的类成员初始化，以及在for()中定义的变量：
+    ```
+      for (int i{0}; i < 10; i++) {
+      ...
+      }
+    ``` 
+
+### 1.3 拷贝初始化
+
++ 如果使用等号初始化一个变量，实际上执行的是拷贝初始化(copy initialization)，编译器把等号右侧的初始值拷贝到新创建的对象中去
++ 示例：
+  ```
+    string s1;       // 默认初始化为空字符串
+    string s2 = s1;  // 拷贝初始化，s2是s1的副本
+  ``` 
+
+### 1.4 直接初始化
+
++ 如果在新创建的变量右侧使用括号将初始值括住（不用等号），则执行的是直接初始化（direct initialization）
+  ```
+    string s1();        // 直接初始化为空字符串 
+    string s2("hi");    // 直接初始化
+    string s3(3, 'c');  // 直接初始化，s2的内容是ccc
+  ``` 
++ 使用圆括号提供初值是用来构造(construct)对象，因此可以知道，所谓的直接初始化就是显式的调用相应的构造函数
+
++ 值初始化的三种情况
+  + 在数组初始化过程中如果提供的初值数量少于数组大小时；
+  + 当不使用初始值定义一个局部静态变量时；
+  + 当通过T()形式的表达式显式地请求值初始化时（T是类型名）
++ explicit构造函数只能用于直接初始化
