--- a/Tools/花生壳.md
+++ b/Tools/花生壳.md
@@ -10,3 +10,12 @@
  +--------------------------------------------------+
 
 ```
+
++ 官网：`https://console.hsk.oray.com/forward`
+
++ ssh 登录公司内网
+  + 用户名： 公司内网的主机用户名
+  + IP地址：花生壳外网ip地址
+  + 端口：花生壳创建端口映射产生的随机端口
++ 示例：
+  + `ssh -p 25397 user@g321z68399.goho.co`
